@@ -1,3 +1,7 @@
+2009-08-29 19:05 adburton
+
+	* src/directories.c: Overwrite invalid default values with MAME subdirs
+
 2009-08-29 18:30 adburton
 
 	* configure.ac, NEWS: Tagged for new release
